# crawlbtc

./: .gitignore  README.md  databasenotes.txt  examplerun.txt  main.py  pyproject.toml  requirements.txt
backupdb/: backup.sh  readme.txt
backupdb/schema_backups/20250819-181246/: MANIFEST.txt  globals.sql  restore.sh  schema_blockchain.sql
db/: address_transactions.schema.sql  block_jobs.schema.sql  init_all.sql  known_addresses.schema.sql  schema_setup.sql  transaction_io.schema.sql  transaction_io_fail.schema.sql  transactions.schema.sql
db2/: block_jobs.sql  blocks.sql  schema_all.sql  spends.sql  transaction_io.sql  transactions.sql  watch_addresses.sql
docs/: backup-strategy.md  extraction-completeness.md  reclaiming-space.md  roadmap.md  tracing-techniques.md
scripts/: 00_extract_blocks_vin_vout_batchgpt5.py  01_backfill_vins.py  01_backfill_vins_deadrecon.py  02_address_scans.py
src/crawlbtc/: __init__.py  analysis.py  backup.py  balances.py  cli.py  clusters.py  configtool.py  correlate.py  diagnose.py  keycrypt.py  prices.py  reorg.py  tags.py  trace.py  trace_template.py
src/crawlbtc/core/: addresses.py  config.py  ingest.py  jobs.py  logging.py  rpc.py  runner.py
src/crawlbtc/data/: entities_builtin.csv
src/crawlbtc/phases/: address_scans.py  backfill_vins.py  extract.py
src/crawlbtc/sql/: schema.sql
src/crawlbtc/sql/migrations/: 001_add_p2pk_address_type.sql  002_drop_redundant_indexes.sql  003_add_entity_tags.sql  004_add_btc_prices.sql  (+2 more)
tests/: test_addresses.py  test_analysis.py  test_extract_parse.py  test_keycrypt.py
